<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Interactive Immersive WarmUp</string>

    <string name="ads_application_id" translatable="false">ca-app-pub-5889155949011891~8243592491</string>
    <string name="facebook_app_id" translatable="false">4158836507725189</string>
    <string name="facebook_client_token" translatable="false">8e7a6bad724ea43845028fc630f452a2</string>

    <string name="msg_next">Next</string>
    <string name="msg_choose_language">Languages</string>
    <string name="intro_title_1">Interactive Fun Workouts</string>
    <string name="intro_content_1">Move your finger with guided videos for instant relaxation.</string>
    <string name="intro_title_2"><![CDATA[Follow & Play with Animations]]></string>
    <string name="intro_content_2">Swipe, tap, and trace along fun interactive scenes.</string>
    <string name="intro_title_3">Interactive Immersive</string>
    <string name="intro_content_3">Discover the most trending videos right now</string>
    <string name="msg_started">Get Started</string>
    <string name="msg_looks_like_you_re_offline">Looks like you\'re offline.Check your Wi-Fi or mobile data!</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_loading">Loading</string>
    <string name="msg_no_network_connection">No network connection</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="msg_do_you_want_to_quit">Do you want to quit the app?</string>
    <string name="msg_setting">Settings</string>
    <string name="msg_preparing_the_ad">Preparing the ad for you.\nPlease wait in…</string>
    <string name="msg_language">Language</string>
    <string name="msg_term_amp_condition">Term of service</string>
    <string name="msg_privacy_policy">Privacy Policy</string>
    <string name="msg_rating">Rating 5 stars</string>
    <string name="msg_share_app">Share with friend</string>
    <string name="msg_home">Home</string>
    <string name="msg_favorite">Favorite</string>
    <string name="msg_interactive">Interactive</string>
    <string name="msg_no_favorite_yet">No favorite yet</string>
    <string name="msg_replay">Replay</string>
    <string name="msg_pause">Pause</string>
    <string name="msg_play">Play</string>
    <string name="msg_rate_us">Rate Us</string>
    <string name="msg_feedback">Feedback</string>
    <string name="msg_open_setting">Open Setting</string>
</resources>