<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="20dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_wifi" />

        <TextView
            style="@style/BodyNormalM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/msg_no_network_connection" />

        <TextView
            style="@style/BodySmallR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/msg_looks_like_you_re_offline"
            android:textColor="@color/neutral_600" />

        <TextView
            android:id="@+id/btn_open_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/app_name"
            style="@style/AppButton"/>
    </LinearLayout>
</LinearLayout>
