<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.zip.lock.screen.wallpapers.widget.SafeAreaLinearView
        android:layout_width="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="match_parent">

        <com.zip.lock.screen.wallpapers.widget.HeaderView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headerText="@string/msg_setting"
            app:headerTextGravity="start" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/white"
            app:strokeWidth="0dp"
            app:cardElevation="1dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/btnLanguage"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_height="56dp"
                    android:gravity="center|start">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_globe"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="16dp"
                        style="@style/BodySmallR"
                        android:text="@string/msg_language"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnTerm"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="center|start">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_term"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="16dp"
                        style="@style/BodySmallR"
                        android:text="@string/msg_term_amp_condition"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnPolicy"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_height="56dp"
                    android:gravity="center|start">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_privacy"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="16dp"
                        style="@style/BodySmallR"
                        android:text="@string/msg_privacy_policy"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnRating"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_height="56dp"
                    android:gravity="center|start">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_rating"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="16dp"
                        style="@style/BodySmallR"
                        android:text="@string/msg_rating"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnShare"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_height="56dp"
                    android:gravity="center|start">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_share"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="16dp"
                        style="@style/BodySmallR"
                        android:text="@string/msg_share_app"/>
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </com.zip.lock.screen.wallpapers.widget.SafeAreaLinearView>
</layout>