<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.zip.lock.screen.wallpapers.ads.AdPlacement"/>
    </data>

    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:padding="16dp"
            android:background="@drawable/bg_dialog"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/appCompatImageView3"
                android:layout_width="wrap_content"
                app:cardCornerRadius="8dp"
                app:strokeColor="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@mipmap/ic_launcher" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvTitle"
                style="@style/BodySmallR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Zip Lock Screen &amp; Wallpapers"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView3"
                app:layout_constraintTop_toTopOf="@+id/appCompatImageView3" />

            <TextView
                android:id="@+id/tvContent"
                style="@style/BodyNormalM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/msg_do_you_want_to_quit"
                app:layout_constraintBottom_toTopOf="@+id/layoutYesNo"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <LinearLayout
                android:id="@+id/layoutYesNo"
                android:layout_width="0dp"
                android:layout_marginBottom="24dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/nativeExit"
                app:layout_constraintEnd_toEndOf="@+id/tvContent"
                app:layout_constraintStart_toStartOf="@+id/appCompatImageView3">

                <TextView
                    android:id="@+id/btLater"
                    style="@style/Button1"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_cta_12r"
                    android:gravity="center"
                    android:paddingVertical="12dp"
                    android:text="@string/msg_no"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/btOk"
                    style="@style/Button1"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_no_r8"
                    android:gravity="center"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="12dp"
                    android:text="@string/msg_yes"
                    android:textColor="@color/neutral_950" />
            </LinearLayout>

            <com.leansoft.ads.view.NativeAdViewContainer
                android:id="@+id/nativeExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:ads_layout_loaded="@layout/layout_native_medium"
                app:ads_layout_loading="@layout/native_medium_shimmer_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>